[package]
authors = ["Sebastian Menski <sebastian@menski.org>"]
name = "unterflow-protocol"
version = "0.1.0"

[dependencies]
byteorder = "1.1.0"
rmp-serde = "0.13.6"
serde = "1.0.11"
serde_bytes = "0.10.1"
serde_derive = "1.0.11"

[dependencies.unterflow-protocol-derive]
path = "unterflow-protocol-derive"
