[package]
authors = ["Sebastian Menski <sebastian@menski.org>"]
documentation = "https://github.com/unterflow/unterflow-protocol"
homepage = "https://github.com/unterflow/unterflow-protocol"
keywords = ["zeebe"]
license = "Apache-2.0"
name = "unterflow-protocol"
readme = "README.md"
repository = "https://github.com/unterflow/unterflow-protocol"
version = "0.1.0"

[badges]

[badges.travis-ci]
repository = "unterflow/unterflow-protocol"

[dependencies]
rmp-serde = "0.13.7"
serde = "1.0.18"
serde_bytes = "0.10.2"
serde_derive = "1.0.18"

[dev-dependencies]
maplit = "1.0.0"

[features]
broker-it = []
